--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,10 @@ BOT_TOKEN=
 # TMDb API (optional)
 TMDB_API_KEY=
 
+# Additional Configuration (optional)
+LOW_CONFIDENCE=0.6
+HIGH_CONFIDENCE=0.8
+
 SESSION_NAME=/data/jellyfin/sessions/jellyfin
 # Bot behavior
 USE_GROUP=false
