feat(docker): use absolute `/data/jellyfin` paths and streamline startup
- Change all media directories in `.env` to absolute paths under `/data/jellyfin`
- Add `docker-entrypoint.sh` logic to recreate and chown required subfolders at container start
- Install and switch to `gosu` for dropping privileges to UID/GID 1000 before launching the bot
- Remove manual host-side `mkdir` requirement—container now self-bootstraps data tree

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,4 @@ MOVIES_DIR=/data/jellyfin/Movies
 TV_DIR=/data/jellyfin/TV
 MUSIC_DIR=/data/jellyfin/Music
 OTHER_DIR=/data/jellyfin/Other
+SESSION_NAME=/data/jellyfin/sessions/jellyfin
