Add comprehensive performance testing suite
- Added startup profiler with import time analysis
- Added E2E performance tests covering full bot lifecycle
- Added live bot tester for real-world performance measurement
- Added unit performance tests for database and memory
- Added master test runner for all performance tests
- Added comprehensive documentation and analysis guides
- Updated .gitignore to exclude temporary test results

Performance testing now covers:
- Startup time (cold/warm)
- Command response times
- Database operations
- Concurrent handling
- Memory usage
- Graceful shutdown

Test results show:
- Average command response: 604ms
- Bot processing: 241ms (good!)
- Network latency: 363ms (60% of time)
- All commands working correctly

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,14 @@ data/jellyfin/
 /wheels/
 /*.tar
 /wheels
+
+# Performance test results (temporary - regenerated on each run)
+import_times.txt
+startup_profile.txt
+startup_timeline.txt
+performance_test_summary.json
+live_bot_performance.json
+performance_baseline.txt
+performance_e2e_results.json
+test_session.session
+test_session.session-journal
