--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,9 @@ cachetools==5.5.2
 tenacity==9.1.2
 async_timeout==5.0.1
 tmdbv3api==1.9.0
+
+# Testing
+pytest==8.3.4
+pytest-asyncio==0.24.0
+pytest-benchmark==5.1.0
+pytest-cov==6.0.0
