--- a/.env.example
+++ b/.env.example
@@ -1,26 +1,49 @@
-# Telegram API Credentials
+# ============================================
+# Jellyfin Media Downloader Bot - Configuration
+# ============================================
+
+# Telegram API Credentials (required)
+# Get these from https://my.telegram.org
 API_ID=
 API_HASH=
-ADMIN_IDS=       # e.g. 1234567890,0987654321
 BOT_TOKEN=
 
-# TMDb API (optional)
+# Admin IDs (comma-separated Telegram user IDs)
+ADMIN_IDS=1234567890,0987654321
+
+# TMDb API (optional - for enhanced metadata)
+# Get from https://www.themoviedb.org/settings/api
 TMDB_API_KEY=
 
-# Additional Configuration (optional)
-LOW_CONFIDENCE=0.6
-HIGH_CONFIDENCE=0.8
+# ============================================
+# Directory Configuration
+# ============================================
+# For Docker: use /data/jellyfin (default)
+# For local dev: use absolute paths like /home/user/jellyfin_test
 
-SESSION_NAME=/data/jellyfin/sessions/jellyfin
-# Bot behavior
-USE_GROUP=false
-FILENAMES="Adult.Best.Friends.2024.1080p.10bit.WEBRip.6CH.x265.HEVC-PSA.mkv,Rust.2024.1080p.10bit.WEBRip.6CH.x265.HEVC-PSA.mkv,Exterritorial.2025.DUAL-AUDIO.GER-ENG.720p.10bit.WEBRip.6CH.mkv,Captain.America.Civil.War.2016.720p.10bit.BluRay.6CH.x265.HE.mkv,9-1-1.S08E16.1080p.10bit.WEBRip.6CH.x265.HEVC-PSA.mkv,Demon_Slayer_Kimetsu_no_Yaiba_S03E04_JAPANESE_720p_10bit_WEBRip.mkv,The.Wheel.of.Time.S03E01.720p.10bit.WEBRip.2CH.x265.HEVC-PSA.mkv,Ghosts.2021.S04E21.1080p.10bit.WEBRip.6CH.x265.HEVC-PSA.mkv,Captain.America.The.Winter.Soldier.2014.720p.10bit.BrRip.6CH.mkv,Mashle Magic and Muscles S02E12 720p HEVC 10bit WEB-DL Mult.mkv"
-
-# Directories (optional - defaults below)
 BASE_DIR=/data/jellyfin
 DOWNLOAD_DIR=/data/jellyfin/Downloads
 MOVIES_DIR=/data/jellyfin/Movies
 TV_DIR=/data/jellyfin/TV
+ANIME_DIR=/data/jellyfin/Anime
 MUSIC_DIR=/data/jellyfin/Music
 OTHER_DIR=/data/jellyfin/Other
 SESSION_NAME=/data/jellyfin/sessions/jellyfin
+
+# ============================================
+# Performance Settings
+# ============================================
+MAX_DOWNLOAD_DURATION=7200
+MAX_CONCURRENT_DOWNLOADS=3
+
+# ============================================
+# Fuzzy Matching Thresholds
+# ============================================
+LOW_CONFIDENCE=0.6
+HIGH_CONFIDENCE=0.8
+
+# ============================================
+# Testing (optional)
+# ============================================
+# Sample filenames for /test command
+FILENAMES="Movie.Title.2024.1080p.WEBRip.mkv,TV.Show.S01E01.720p.mkv"
