--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@ var/
 .installed.cfg
 *.egg
 
-# Environments
+# Virtual Environments
 .env
 .venv
 env/
@@ -29,29 +29,38 @@ ENV/
 env.bak/
 venv.bak/
 
-# VS Code
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+# Testing
+.pytest_cache/
+.benchmarks/
+.coverage
+htmlcov/
+.tox/
+.nox/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
 
 # Telethon session files
 *.session
 *.session-journal
 
 # Jellyfin Bot specific
-jellyfin_bot.session
-jellyfin_bot.session-journal
+jellyfin_bot.session*
 Downloads/
-clean_with_guessit.py
-clean_with_ptn.py
 bot.log
 filenames.txt
-sanitized_guessit.txt
-sanitized_ptn.txt
-suggested_improvements.md
 data/jellyfin/
 /wheels/
 /*.tar
-/wheels
+
+# Legacy files (kept for reference)
+main_legacy.py
+
+# Test artifacts
+/tmp/
+$HOME/
+home/
